user layout bug

--- a/app/assets/stylesheets/vish/items-new/_mixin_items.css.sass
+++ b/app/assets/stylesheets/vish/items-new/_mixin_items.css.sass
@@ -376,7 +376,7 @@
           img
             width: 100%
     .info-user
-      height: 75px 
+      height: 86px 
       font-family: $secondFontFamily
       display: block
       margin-left: 3px
@@ -404,7 +404,7 @@
           &:hover
             color: $firstColor
       .count-followers
-        font-size: 10px
+        font-size: 11px
         margin: 0 auto
         display: block
         text-align: center
@@ -412,4 +412,5 @@
           color: $grayLight
       .info-bottom
         .add
+          margin-top: 10px
           @include follow-items-user
